# beir-nlp-benchmark

./: README.md  pyproject.toml  requirements.txt
src/beir_benchmark/: data.py  encoders.py  metrics.py  pooling.py  retrievers.py  run.py
tools/: run_benchmark.py
