[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "beir-nlp-benchmark"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "rank-bm25",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]